@@ -21,6 +21,11 @@ module Nokogiri
           assert_equal 'UTF-8', Nokogiri::LIBXML_VERSION.encoding.name
         end
       end
+
+      def test_empty_doc_encoding
+        encoding = 'US-ASCII'
+        assert_equal encoding, Nokogiri::XML(nil, nil, encoding).encoding
+      end
     end
   end
 end
